# OpenMindat_AI

./: .gitignore  README.md  main.py  pyproject.toml
servers/: server_math.py  server_mindat.py  server_mindat_query_generation.py
servers/unused_servers/: server_mindat_query_generation copy.py
utils/: mindat_schema_manager.py  model_validator.py  rule_validator.py  validation_pipeline.py
